add not completed controller tests